--- a/index.html
+++ b/index.html
@@ -208,6 +208,28 @@
             </div>
           </div>
         </div>
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="images/wp-food-2025-desktop.png" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Redesign Welcome Page Detikfood</a>
+              </h4>
+              <p class="card-text">Halaman Utama detikFood Desktop yang di redesign Pada tahun 2025</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="images/wp-food-2025-mobile.png" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Redesign Welcome Page Detikfood</a>
+              </h4>
+              <p class="card-text">Halaman Utama detikFood Mobile yang di redesign Pada tahun 2025</p>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- /.row -->
 
